fixed border issue on calorie counter and image not showing up in home page

--- a/src/counter.css
+++ b/src/counter.css
@@ -60,7 +60,8 @@
     flex-direction: column;
     background-color: #f7ee8b;
     overflow: hidden;
-    border-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .counter-list-container {
